# perplex_eval

./: .gitignore  README.md  inspect_parquet.py  pyproject.toml  run_redpajama_1b_inference.py  setup.sh  submit.sh  vllm_config.yaml  wiki_eval.py
legacy/: redpajama_logprobs_api.py  text_chunk.py
model_evaluation/: benchmark_run.sh  run_1_benchmark.sh
model_evaluation/output/acp_bench/01-ai__Yi-1.5-6B-Chat/: results_2025-07-30T01-49-00.862786.json
model_evaluation/output/acp_bench/01-ai__Yi-1.5-9B-Chat/: results_2025-07-30T11-34-27.619525.json
model_evaluation/output/acp_bench/EleutherAI__pythia-12b-deduped/: results_2025-07-30T10-13-15.925314.json
model_evaluation/output/acp_bench/EleutherAI__pythia-1b/: results_2025-07-29T23-36-09.293234.json
model_evaluation/output/acp_bench/EleutherAI__pythia-6.9b-v0/: results_2025-07-30T00-16-39.703572.json
model_evaluation/output/acp_bench/Qwen__Qwen3-0.6B/: results_2025-07-29T23-22-07.304447.json
model_evaluation/output/acp_bench/Qwen__Qwen3-8B/: results_2025-07-29T21-56-20.316874.json
preprocess/: wiki_chunker.py
script/: download_redpajama_data.py  inspect_redpajama_csv.py
shell/: submit.sh
slurm/: redpajama-1b-inference.err  redpajama-1b-inference.out
src/data/: subset_data.py  utils.py
src/evaluate/: eval_document.py  vllm_utils.py
wiki_preprocess/: text_chunk_2.py
wiki_preprocess/.ipynb_checkpoints/: text_chunk-checkpoint.py
wiki_preprocess/chunk_sample/: sample_chunks.txt  sample_chunks_2.txt
wiki_preprocess/notebook/: EDA.ipynb
(+336 files in other folders)
